feat: added example code.
Signed-off-by: f3rmata <fermata@h2o.moe>

--- a/matlab/hdlsrc/chorus/html/chorus_flatten_hierarchy.html
+++ b/matlab/hdlsrc/chorus/html/chorus_flatten_hierarchy.html
@@ -137,75 +137,7 @@ function hdlTableExpandAll(o, numNtks, numComps)
 }
 // -->
 </script>
-<a name="List of subsystems:">
-<font size="+1" color="#000066">
-<b class="midprod">
-List of subsystems:
-</b>
-
-</font>
-
-</a>
-<br /><br /><b>
-<li>'FlattenHierarchy' turned 'on':</li>
-</b>
-<span name="collapsible" id="collapsible" style="font-family:monospace" onclick="hdlTableShrink(this, 'onList')" onmouseover="this.style.cursor = 'pointer'">
-[+]
-</span>
-<span name="onList" id="onList" style="display: none;">
-<ul>
-<li>
-<a href="matlab:coder.internal.code2model('chorus:11:192:65')" name="code2model" class="code2model">
-Look-Up
-Table
-</a>
-
-</li>
-
-</ul>
-
-</span>
-<br /><br /><b>
-<li>'FlattenHierarchy' turned 'off':</li>
-</b>
-<span name="collapsible" id="collapsible" style="font-family:monospace" onclick="hdlTableShrink(this, 'offList')" onmouseover="this.style.cursor = 'pointer'">
-[+]
-</span>
-<span name="offList" id="offList" style="display: none;">
-<ul>
-<li>
-<a href="matlab:coder.internal.code2model('chorus:11:192')" name="code2model" class="code2model">
-sine hdl
-</a>
-
-</li>
-<li>
-<a href="matlab:coder.internal.code2model('chorus:11')" name="code2model" class="code2model">
-Cosine
-HDL Optimized
-</a>
-
-</li>
-<li>
-<a href="matlab:coder.internal.code2model('chorus')" name="code2model" class="code2model">
-chorus
-</a>
-
-</li>
-
-</ul>
-
-</span>
-<br /><br /><a name="Flattening Status:">
-<font size="+1" color="#000066">
-<b class="midprod">
-Flattening Status:
-</b>
-
-</font>
-
-</a>
-<br /><br />'Hierarchical flattening' was successful.<br /><br /><a name="Generated Model">
+No subsystems found with the HDL block property 'FlattenHierarchy' turned 'on'.<br /><br /><a name="Generated Model">
 <font size="+1" color="#000066">
 <b class="midprod">
 Generated Model
