--- a/matlab/hdlsrc/chorus/html/chorus_bill_of_materials.html
+++ b/matlab/hdlsrc/chorus/html/chorus_bill_of_materials.html
@@ -5,7 +5,7 @@ High-level Resource Utilization Report for chorus
 </title>
 
 </head>
-<body bgcolor="#ffffff" link="0033CC" vlink="#666666" onload="try {if (top) {if (top.rtwPageOnLoad) top.rtwPageOnLoad('rtwIdBillOfMaterials'); else local_onload();}} catch(err) {};hdlTableShrink(this, 'Multiply_1_1');hdlTableShrink(this, 'Multiply_1_2');hdlTableShrink(this, 'Adder_1_1');hdlTableShrink(this, 'Adder_1_2');hdlTableShrink(this, 'Adder_1_3');hdlTableShrink(this, 'Subtractor_1_1');hdlTableShrink(this, 'Register_1_1');hdlTableShrink(this, 'Multiplexer_1_1');hdlTableShrink(this, 'Multiplexer_1_2');hdlTableShrink(this, 'Input_Port');hdlTableShrink(this, 'Output_Port');hdlTableShrink(this, 'Subtractor_2_1');hdlTableShrink(this, 'Subtractor_2_2');hdlTableShrink(this, 'Multiplexer_2_1');hdlTableShrink(this, 'Multiplexer_2_2');hdlTableShrink(this, 'Multiplexer_2_3');hdlTableShrink(this, 'Multiplexer_2_4');">
+<body bgcolor="#ffffff" link="0033CC" vlink="#666666" onload="try {if (top) {if (top.rtwPageOnLoad) top.rtwPageOnLoad('rtwIdBillOfMaterials'); else local_onload();}} catch(err) {};hdlTableShrink(this, 'Multiply_1_1');hdlTableShrink(this, 'Adder_1_1');hdlTableShrink(this, 'Adder_1_2');hdlTableShrink(this, 'Adder_1_3');hdlTableShrink(this, 'Subtractor_1_1');hdlTableShrink(this, 'Register_1_1');hdlTableShrink(this, 'Multiplexer_1_2');hdlTableShrink(this, 'Multiplexer_1_3');hdlTableShrink(this, 'Input_Port');hdlTableShrink(this, 'Output_Port');">
 <script>
 <!--
 function hdlTableShrink(o,tagNameStr)
@@ -152,7 +152,7 @@ Summary
 Multipliers
 </td>
 <td align="center" valign="top" style="border-style: none">
-2
+1
 </td>
 
 </tr>
@@ -161,7 +161,7 @@ Multipliers
 Adders/Subtractors
 </td>
 <td align="center" valign="top" style="border-style: none">
-7
+3
 </td>
 
 </tr>
@@ -197,7 +197,7 @@ RAMs
 Multiplexers
 </td>
 <td align="center" valign="top" style="border-style: none">
-13
+5
 </td>
 
 </tr>
@@ -246,33 +246,15 @@ chorus
 
 </h5>
 <h5>
-Multipliers (2)
+Multipliers (1)
 </h5>
 <span name="collapsible" id="collapsible" style="font-family:monospace" onclick="hdlTableShrink(this, 'Multiply_1_1')" onmouseover="this.style.cursor = 'pointer'">
 [+]
 </span>
 <span style="font-family:monospace">
-17x17-bit Multiply 							: 1
-</span>
-<span name="Multiply_1_1" id="Multiply_1_1">
-<ul>
-<li>
-<a href="matlab:coder.internal.code2model('chorus:14')" name="code2model" class="code2model">
-Gain4
-</a>
-
-</li>
-
-</ul>
-
-</span>
-<br /><span name="collapsible" id="collapsible" style="font-family:monospace" onclick="hdlTableShrink(this, 'Multiply_1_2')" onmouseover="this.style.cursor = 'pointer'">
-[+]
-</span>
-<span style="font-family:monospace">
 32x32-bit Multiply 							: 1
 </span>
-<span name="Multiply_1_2" id="Multiply_1_2">
+<span name="Multiply_1_1" id="Multiply_1_1">
 <ul>
 <li>
 <a href="matlab:coder.internal.code2model('chorus:7')" name="code2model" class="code2model">
@@ -285,25 +267,19 @@ Gain1
 
 </span>
 <br /><h5>
-Adders/Subtractors (4)
+Adders/Subtractors (3)
 </h5>
 <span name="collapsible" id="collapsible" style="font-family:monospace" onclick="hdlTableShrink(this, 'Adder_1_1')" onmouseover="this.style.cursor = 'pointer'">
 [+]
 </span>
 <span style="font-family:monospace">
-16x16-bit Adder 							: 1
+17x17-bit Adder 							: 1
 </span>
 <span name="Adder_1_1" id="Adder_1_1">
 <ul>
 <li>
-<a href="matlab:coder.internal.code2model('chorus:14')" name="code2model" class="code2model">
-Gain4
-</a>
-
-</li>
-<li>
-<a href="matlab:coder.internal.code2model('chorus:17')" name="code2model" class="code2model">
-Sum2
+<a href="matlab:coder.internal.code2model('chorus:5')" name="code2model" class="code2model">
+multiportswitch
 </a>
 
 </li>
@@ -315,16 +291,10 @@ Sum2
 [+]
 </span>
 <span style="font-family:monospace">
-33x33-bit Adder 							: 2
+32x32-bit Adder 							: 0
 </span>
 <span name="Adder_1_2" id="Adder_1_2">
 <ul>
-<li>
-<a href="matlab:coder.internal.code2model('chorus:5')" name="code2model" class="code2model">
-multiportswitch
-</a>
-
-</li>
 <li>
 <a href="matlab:coder.internal.code2model('chorus:8')" name="code2model" class="code2model">
 Sum1
@@ -339,7 +309,7 @@ Sum1
 [+]
 </span>
 <span style="font-family:monospace">
-32x32-bit Adder 							: 0
+33x33-bit Adder 							: 1
 </span>
 <span name="Adder_1_3" id="Adder_1_3">
 <ul>
@@ -393,15 +363,18 @@ Delay1
 
 </span>
 <br /><h5>
-Multiplexers (6)
+Multiplexers (5)
 </h5>
-<span name="collapsible" id="collapsible" style="font-family:monospace" onclick="hdlTableShrink(this, 'Multiplexer_1_1')" onmouseover="this.style.cursor = 'pointer'">
+<span style="font-family:monospace">
+16-bit 2-to-1 Multiplexer 							: 1
+</span>
+<br /><span name="collapsible" id="collapsible" style="font-family:monospace" onclick="hdlTableShrink(this, 'Multiplexer_1_2')" onmouseover="this.style.cursor = 'pointer'">
 [+]
 </span>
 <span style="font-family:monospace">
-32-bit 2-to-1 Multiplexer 							: 3
+32-bit 2-to-1 Multiplexer 							: 1
 </span>
-<span name="Multiplexer_1_1" id="Multiplexer_1_1">
+<span name="Multiplexer_1_2" id="Multiplexer_1_2">
 <ul>
 <li>
 <a href="matlab:coder.internal.code2model('chorus:5')" name="code2model" class="code2model">
@@ -413,13 +386,13 @@ multiportswitch
 </ul>
 
 </span>
-<br /><span name="collapsible" id="collapsible" style="font-family:monospace" onclick="hdlTableShrink(this, 'Multiplexer_1_2')" onmouseover="this.style.cursor = 'pointer'">
+<br /><span name="collapsible" id="collapsible" style="font-family:monospace" onclick="hdlTableShrink(this, 'Multiplexer_1_3')" onmouseover="this.style.cursor = 'pointer'">
 [+]
 </span>
 <span style="font-family:monospace">
 32-bit 3-to-1 Multiplexer 							: 3
 </span>
-<span name="Multiplexer_1_2" id="Multiplexer_1_2">
+<span name="Multiplexer_1_3" id="Multiplexer_1_3">
 <ul>
 <li>
 <a href="matlab:coder.internal.code2model('chorus:8')" name="code2model" class="code2model">
@@ -446,7 +419,7 @@ Number of Input Bits: 51
 clk: 1 bit
 </li>
 <li>
-rst_n: 1 bit
+reset: 1 bit
 </li>
 <li>
 clk_enable: 1 bit
@@ -483,151 +456,6 @@ ce_out: 1 bit
 Out1
 </a>
 : 32 bits
-</li>
-
-</ul>
-
-</span>
-<br /><p><hr /></p><h5>
-Report for Subsystem:    <a href="matlab:coder.internal.code2model('chorus:11')" name="code2model" class="code2model">
-Cosine
-HDL Optimized
-</a>
-
-</h5>
-<h5>
-Adders/Subtractors (3)
-</h5>
-<span name="collapsible" id="collapsible" style="font-family:monospace" onclick="hdlTableShrink(this, 'Subtractor_2_1')" onmouseover="this.style.cursor = 'pointer'">
-[+]
-</span>
-<span style="font-family:monospace">
-32x32-bit Subtractor 							: 2
-</span>
-<span name="Subtractor_2_1" id="Subtractor_2_1">
-<ul>
-<li>
-<a href="matlab:coder.internal.code2model('chorus:11:192:44')" name="code2model" class="code2model">
-Amp50
-</a>
-
-</li>
-<li>
-<a href="matlab:coder.internal.code2model('chorus:11:192:57')" name="code2model" class="code2model">
-p50mA
-</a>
-
-</li>
-
-</ul>
-
-</span>
-<br /><span name="collapsible" id="collapsible" style="font-family:monospace" onclick="hdlTableShrink(this, 'Subtractor_2_2')" onmouseover="this.style.cursor = 'pointer'">
-[+]
-</span>
-<span style="font-family:monospace">
-18-bit Subtractor 							: 1
-</span>
-<span name="Subtractor_2_2" id="Subtractor_2_2">
-<ul>
-<li>
-<a href="matlab:coder.internal.code2model('chorus:11:192:50')" name="code2model" class="code2model">
-Negate
-</a>
-
-</li>
-
-</ul>
-
-</span>
-<br /><h5>
-Multiplexers (7)
-</h5>
-<span name="collapsible" id="collapsible" style="font-family:monospace" onclick="hdlTableShrink(this, 'Multiplexer_2_1')" onmouseover="this.style.cursor = 'pointer'">
-[+]
-</span>
-<span style="font-family:monospace">
-32-bit 2-to-1 Multiplexer 							: 1
-</span>
-<span name="Multiplexer_2_1" id="Multiplexer_2_1">
-<ul>
-<li>
-<a href="matlab:coder.internal.code2model('chorus:11:192:53')" name="code2model" class="code2model">
-QuadHandle1
-</a>
-
-</li>
-
-</ul>
-
-</span>
-<br /><span name="collapsible" id="collapsible" style="font-family:monospace" onclick="hdlTableShrink(this, 'Multiplexer_2_2')" onmouseover="this.style.cursor = 'pointer'">
-[+]
-</span>
-<span style="font-family:monospace">
-18-bit 2-to-1 Multiplexer 							: 4
-</span>
-<span name="Multiplexer_2_2" id="Multiplexer_2_2">
-<ul>
-<li>
-<a href="matlab:coder.internal.code2model('chorus:11:192:54')" name="code2model" class="code2model">
-QuadHandle2
-</a>
-
-</li>
-<li>
-<a href="matlab:coder.internal.code2model('chorus:11:192:63')" name="code2model" class="code2model">
-CastU16En3
-</a>
-
-</li>
-<li>
-<a href="matlab:coder.internal.code2model('chorus:11:192:66')" name="code2model" class="code2model">
-Saturation
-</a>
-
-</li>
-<li>
-<a href="matlab:coder.internal.code2model('chorus:11:192:79')" name="code2model" class="code2model">
-Switch
-</a>
-
-</li>
-
-</ul>
-
-</span>
-<br /><span name="collapsible" id="collapsible" style="font-family:monospace" onclick="hdlTableShrink(this, 'Multiplexer_2_3')" onmouseover="this.style.cursor = 'pointer'">
-[+]
-</span>
-<span style="font-family:monospace">
-16-bit 3-to-1 Multiplexer 							: 1
-</span>
-<span name="Multiplexer_2_3" id="Multiplexer_2_3">
-<ul>
-<li>
-<a href="matlab:coder.internal.code2model('chorus:11:192:65')" name="code2model" class="code2model">
-prelookup_comp
-</a>
-
-</li>
-
-</ul>
-
-</span>
-<br /><span name="collapsible" id="collapsible" style="font-family:monospace" onclick="hdlTableShrink(this, 'Multiplexer_2_4')" onmouseover="this.style.cursor = 'pointer'">
-[+]
-</span>
-<span style="font-family:monospace">
-17-bit 2-to-1 Multiplexer 							: 1
-</span>
-<span name="Multiplexer_2_4" id="Multiplexer_2_4">
-<ul>
-<li>
-<a href="matlab:coder.internal.code2model('chorus:11:192:55')" name="code2model" class="code2model">
-SignCorrected
-</a>
-
 </li>
 
 </ul>
