--- a/matlab/hdlsrc/chorus/html/chorus_dut_information.html
+++ b/matlab/hdlsrc/chorus/html/chorus_dut_information.html
@@ -167,7 +167,7 @@ boolean
 </tr>
 <tr style="background-color: #eeeeff">
 <td align="left" valign="top" style="border-style: none">
-rst_n
+reset
 </td>
 <td align="center" valign="top" style="border-style: none">
 boolean
